--- a/style.css
+++ b/style.css
@@ -122,56 +122,56 @@ body {
    justify-content: flex-end;
 }
 .weather-details i {
-  color: #06283d;
-  font-size: 26px;
-  margin-right: 10px;
-  margin-top: 6px;
+   color: #06283d;
+   font-size: 26px;
+   margin-right: 10px;
+   margin-top: 6px;
 }
 
-.weather-details span{
-  color: #06283d;
-  font-size: 22px;
-  font-weight: 500;
+.weather-details span {
+   color: #06283d;
+   font-size: 22px;
+   font-weight: 500;
 }
 
-.weather-details p{
-  color: #06283d;
-  font-size: 14px;
-  font-weight: 500;
+.weather-details p {
+   color: #06283d;
+   font-size: 14px;
+   font-weight: 500;
 }
 
-.not-found{
-  width: 100%;
-  text-align: center;
-  margin-top: 50px;
-  scale: 0;
-  opacity: 0;
-  display: none;
+.not-found {
+   width: 100%;
+   text-align: center;
+   margin-top: 50px;
+   scale: 0;
+   opacity: 0;
+   display: none;
 }
 
-.not-found img{
-  width: 70%;
+.not-found img {
+   width: 70%;
 }
 
-.not-found p{
-  color: #06283d;
-  font-size: 22px;
-  font-weight: 500;
-  margin-top: 12px;
+.not-found p {
+   color: #06283d;
+   font-size: 22px;
+   font-weight: 500;
+   margin-top: 12px;
 }
 .weather-box,
-.weather-details{
-  scale: 0;
-  opacity: 0;
+.weather-details {
+   scale: 0;
+   opacity: 0;
 }
 
-.fade-in{
-  animation: 0.5s fadeIn forwards;
-  animation-delay: 0.5s;
+.fadeIn {
+   animation: 0.5s fadeIn forwards;
+   animation-delay: 0.5s;
 }
-@keyframes fadeIn{
-  to{
-    scale: 1;
-    opacity: 1;
-  }
+@keyframes fadeIn {
+   to {
+      scale: 1;
+      opacity: 1;
+   }
 }
